Updated base api url

--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ VITE_FIREBASE_PROJECT_ID="ci4-face-rec-app-nov2024"
 VITE_FIREBASE_STORAGE_BUCKET="ci4-face-rec-app-nov2024.firebasestorage.app"
 VITE_FIREBASE_MESSAGING_SENDER_ID="294730741574"
 VITE_FIREBASE_APP_ID="1:294730741574:web:01d1d41ff621bd1485d747"
-VITE_DEV_ONLY_BASE_URL="http://localhost:5000"
 FIRESTORE_EMULATOR_HOST="127.0.0.1:8080"
+VITE_DEV_ONLY_BASE_URL="http://localhost:5000"
+VITE_DEV_ONLY_BASE_API_URL="http://localhost:5000"
 VITE_PROD_BASE_URL="https://www.face-rec-app.yatrik.dev"
+VITE_PROD_BASE_API_URL="https://www.face-rec-app-api.yatrik.dev"
